# DECT-NR--Open-Stack

./: CMakeLists.txt  README.md  prj.conf
.github/: CODEOWNERS
demoHex/: SENSOR.hex
overlay/: htu21d_sensor.overlay
src/: main.c
src/app/: app_state.c  app_state.h  applications.c  applications.h  packet_generator.c  packet_generator.h  packet_processor.c  packet_processor.h
src/common/: data_buffers.c  data_buffers.h  dect_timers.c  dect_timers.h  modem_operator.c  modem_operator.h  network.c  network.h  rx_fifo.c  rx_fifo.h  sfn_allocator.c  sfn_allocator.h  tx_fifo.c  tx_fifo.h  utils.c  utils.h
src/config/: device_config.h
src/drivers/: display_handler.c  display_handler.h  gpio_handler.c  gpio_handler.h  modem_handler.c  modem_handler.h  sensor_bme280.c  sensor_bme280.h  sensor_htu21d.c  sensor_htu21d.h  uart_handler.c  uart_handler.h
src/fsm/: fsm.c  fsm.h  fsm_event.c  fsm_event.h
src/headers/: mac_header_field.c  mac_header_field.h  mac_info_elements.c  mac_info_elements.h  mac_message.c  mac_message.h  physical_header_field.c  physical_header_field.h
src/protocol/: procedures.c  procedures.h
